--- a/scss/home.scss
+++ b/scss/home.scss
@@ -33,16 +33,16 @@ section#accesoIndustrias{
     background-position: center;
   }
   .accesoIndustrias--bloque_cont1{
-      background-image: url(/images/backIndustrias-SF.png);
+      background-image: url(../images/backIndustrias-SF.png);
     }
     .accesoIndustrias--bloque_cont2{
-      background-image: url(/images/backIndustrias-BD.png);
+      background-image: url(../images/backIndustrias-BD.png);
     }
     .accesoIndustrias--bloque_cont3{
-      background-image: url(/images/backIndustrias-MC.png);
+      background-image: url(../images/backIndustrias-MC.png);
     }
     .accesoIndustrias--bloque_cont4{
-      background-image: url(/images/backIndustrias-ER.png);
+      background-image: url(../images/backIndustrias-ER.png);
     }
 }
 
