--- a/styles/fidesnet.css
+++ b/styles/fidesnet.css
@@ -162,20 +162,20 @@ section#photoHeader {
       section#photoHeader .contenidoEncabezado {
         width: 90%; } }
   section#photoHeader span.headerHome {
-    background-image: url(/images/headerHome.png); }
+    background-image: url(../images/headerHome.png); }
     @media screen and (max-width: 700px) {
       section#photoHeader span.headerHome {
-        background-image: url(/images/headerHomeMobile.png); } }
+        background-image: url(../images/headerHomeMobile.png); } }
   section#photoHeader span.headerProfesionales {
-    background-image: url(/images/headerProfesionales.png); }
+    background-image: url(../images/headerProfesionales.png); }
     @media screen and (max-width: 700px) {
       section#photoHeader span.headerProfesionales {
-        background-image: url(/images/headerProfesionalesMobile.png); } }
+        background-image: url(../images/headerProfesionalesMobile.png); } }
   section#photoHeader span.headerServicios {
-    background-image: url(/images/headerServicios.png); }
+    background-image: url(../images/headerServicios.png); }
     @media screen and (max-width: 700px) {
       section#photoHeader span.headerServicios {
-        background-image: url(/images/headerServiciosMobile.png); } }
+        background-image: url(../images/headerServiciosMobile.png); } }
 
 footer .contenidoFooter {
   justify-content: space-between; }
@@ -261,13 +261,13 @@ section#accesoIndustrias {
     background-size: cover;
     background-position: center; }
   .accesoIndustrias .accesoIndustrias--bloque_cont1 {
-    background-image: url(/images/backIndustrias-SF.png); }
+    background-image: url(../images/backIndustrias-SF.png); }
   .accesoIndustrias .accesoIndustrias--bloque_cont2 {
-    background-image: url(/images/backIndustrias-BD.png); }
+    background-image: url(../images/backIndustrias-BD.png); }
   .accesoIndustrias .accesoIndustrias--bloque_cont3 {
-    background-image: url(/images/backIndustrias-MC.png); }
+    background-image: url(../images/backIndustrias-MC.png); }
   .accesoIndustrias .accesoIndustrias--bloque_cont4 {
-    background-image: url(/images/backIndustrias-ER.png); }
+    background-image: url(../images/backIndustrias-ER.png); }
 
 .accesoServicios {
   flex-direction: row;
@@ -438,12 +438,12 @@ header {
   margin-bottom: 20px; }
 
 .accordion-button::after {
-  background-image: url(/images/ic-collapse.png);
+  background-image: url(../images/ic-collapse.png);
   background-size: 50% 50%;
   background-position: center; }
 
 .accordion-button:not(.collapsed)::after {
-  background-image: url(/images/ic-collapsed.png);
+  background-image: url(../images/ic-collapsed.png);
   background-size: 50% 50%;
   background-position: center; }
 
