--- a/styles/fidesnet.css
+++ b/styles/fidesnet.css
@@ -112,19 +112,19 @@ section#bloqueLinks {
 
 @font-face {
   font-family: 'GuardianSans';
-  src: url(/fonts/GuardianSansMedium.otf);
+  src: url(../fonts/GuardianSansMedium.otf);
   font-weight: 300;
   font-style: normal; }
 
 @font-face {
   font-family: 'GuardianSans';
-  src: url(/fonts/GuardianSansBold.otf);
+  src: url(../fonts/GuardianSansBold.otf);
   font-weight: 600;
   font-style: normal; }
 
 @font-face {
   font-family: 'GuardianSans';
-  src: url(/fonts/GuardianSansRegularIt.otf);
+  src: url(../fonts/GuardianSansRegularIt.otf);
   font-weight: 500;
   font-style: italic; }
 
