--- a/styles/fidesnet.css
+++ b/styles/fidesnet.css
@@ -176,6 +176,12 @@ section#photoHeader {
     @media screen and (max-width: 700px) {
       section#photoHeader span.headerServicios {
         background-image: url(../images/headerServiciosMobile.png); } }
+  section#photoHeader span.headerNosotros {
+    font-style: italic;
+    background-image: url(../images/headerNosotros.png); }
+    @media screen and (max-width: 700px) {
+      section#photoHeader span.headerNosotros {
+        background-image: url(../images/headerNosotrosMobile.png); } }
 
 footer .contenidoFooter {
   justify-content: space-between; }
@@ -582,3 +588,57 @@ section#infoCvProfesional {
         font-size: 14px;
         line-height: 30px;
         letter-spacing: 0.5px; }
+
+.contenidoNosotros {
+  background-color: #f6f7fa;
+  padding-top: 80px;
+  padding-bottom: 80px; }
+  .contenidoNosotros .contenidoNosotros-bloque {
+    gap: 50px; }
+    @media screen and (max-width: 800px) {
+      .contenidoNosotros .contenidoNosotros-bloque {
+        flex-direction: column; } }
+    .contenidoNosotros .contenidoNosotros-bloque .contenidoNosotros-bloque__col {
+      width: 50%;
+      text-align: left;
+      text-align: justify;
+      justify-content: center; }
+      @media screen and (max-width: 800px) {
+        .contenidoNosotros .contenidoNosotros-bloque .contenidoNosotros-bloque__col {
+          width: 90%;
+          margin: 0 auto;
+          text-align: center; } }
+      .contenidoNosotros .contenidoNosotros-bloque .contenidoNosotros-bloque__col .contenidoNosotros-bloque__titulo {
+        font-weight: 500;
+        letter-spacing: 2px;
+        font-size: 30px; }
+      .contenidoNosotros .contenidoNosotros-bloque .contenidoNosotros-bloque__col .contenidoNosotros-bloque__texto {
+        font-size: 14px;
+        line-height: 30px; }
+      .contenidoNosotros .contenidoNosotros-bloque .contenidoNosotros-bloque__col img {
+        width: 100%; }
+
+.carousel-control-next-icon {
+  background-image: url(/images/ic-flecha-Der.png); }
+
+.carousel-control-prev-icon {
+  background-image: url(/images/ic-flecha-Izq.png); }
+
+.carousel-control-next, .carousel-control-prev {
+  width: 5%; }
+
+.contenidoSlider {
+  display: flex;
+  width: 100%;
+  margin: 0 auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 0 auto;
+  justify-content: center; }
+  .contenidoSlider .contenidoSlider-bloque {
+    background-color: #f6f7fa;
+    padding-top: 10px;
+    padding-bottom: 10px; }
+    .contenidoSlider .contenidoSlider-bloque img {
+      width: 70%; }
