--- a/styles/fidesnet.css
+++ b/styles/fidesnet.css
@@ -653,4 +653,10 @@ section#infoCvProfesional {
       width: 70%; }
 
 .carousel-inner.clientes .carousel-item .contenidoSlider .contenidoSlider-bloque {
-  padding-top: 30px; }
+  padding-top: 20px;
+  width: 20%;
+  padding-bottom: 0px; }
+
+.carousel-inner.clientes .carousel-item .contenidoSlider .contenidoSlider-bloque-titulo {
+  padding-top: 10px;
+  padding-bottom: 10px; }
