--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,4 +10,7 @@
 @import 'servicios.scss';
 @import 'profesionales.scss';
 @import 'nosotros.scss';
+@import 'newsletters.scss';
 @import 'clientes.scss';
+@import 'tendencias.scss';
+@import 'calendario.scss';
