--- a/scss/fidesnet.scss
+++ b/scss/fidesnet.scss
@@ -45,6 +45,9 @@ section{
 .colorDestacado{
   color: $fidesRed;
 }
+.colorTexto{
+  color:$fidesText
+}
 
 .textoDestacado{
   font-weight: 600; 
@@ -59,6 +62,10 @@ section{
 .titulo{
   font-size: 30px;
   letter-spacing: 1px;
+  @media screen and (max-width:600px) {
+    font-size: 25px;
+    line-height: 30px;
+  }
 }
 
 // DIMENSIONES
@@ -92,12 +99,45 @@ section#bloqueLinks{
     height: 200px;
     justify-content: center;
     color:white;
-    background-size: cover;
+    background-size: 100%;
     letter-spacing: 2px;
     font-size: 30px;
     text-decoration: none;
+    transition: 3s;
+    &:hover{
+      font-size: 32px;
+      background-size: 101%;
+      background-position: center;
+    }
     @media screen and (max-width:800px){
       width: 100%;
     }
   }
+}
+
+.botonFides{
+  background-color: $fidesRed;
+  color: white;
+  border:0px;
+  padding:4px 30px;
+  display: inline-block;
+  font-weight: 500;
+  border:2px solid $fidesRed;
+  box-sizing: border-box;
+  transition:0.3s;
+  &:hover{
+    box-sizing: border-box;
+    border:2px solid $fidesRed;
+    background-color: white;
+    color:$fidesRed;
+  }
+}
+
+.pl{
+  padding-left:20px;
+}
+
+#link{
+  text-decoration: none;
+  color: auto;
 }
