--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -19,4 +19,19 @@
     font-weight: 500;
     font-style:italic; 
     }
+
+    @font-face {
+      font-family: 'GuardianSans';
+      src: url(../fonts/GuardianSansRegular.otf);
+      font-weight: 400;
+      font-style:normal; 
+      }  
   
+
+      @font-face {
+        font-family: 'GuardianSans';
+        src: url(../fonts/GuardianSansLight.otf);
+        font-weight: 300;
+        font-style:normal; 
+        }  
+    
