--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -1,12 +1,23 @@
 header{
-  width: 90%;
-  max-width: 1366px;
+  // width: 90%;
+  // max-width: 1366px;
   justify-content: space-between;
+  position: sticky;
+  top: 0px;
+  width: 100%;
+  background-color: white;
+  z-index: 999999;
   div#navbarNav {
     justify-content: flex-end;
     ul.navbar-nav{
       gap:20px;
       font-size: 16px;
+      li{
+        border-bottom: 1px solid white;
+      }
+      li:hover{
+        border-bottom: 1px solid $fidesText;
+      }
     }
   }
 }
