--- a/styles/fidesnet.css
+++ b/styles/fidesnet.css
@@ -33,6 +33,9 @@ section {
 .colorDestacado {
   color: #ca2417; }
 
+.colorTexto {
+  color: #444444; }
+
 .textoDestacado {
   font-weight: 600;
   font-style: italic; }
@@ -43,6 +46,10 @@ section {
 .titulo {
   font-size: 30px;
   letter-spacing: 1px; }
+  @media screen and (max-width: 600px) {
+    .titulo {
+      font-size: 25px;
+      line-height: 30px; } }
 
 .w90 {
   width: 90%; }
@@ -71,13 +78,41 @@ section#bloqueLinks {
     height: 200px;
     justify-content: center;
     color: white;
-    background-size: cover;
+    background-size: 100%;
     letter-spacing: 2px;
     font-size: 30px;
-    text-decoration: none; }
+    text-decoration: none;
+    transition: 3s; }
+    section#bloqueLinks a.bloqueLinks-acceso:hover {
+      font-size: 32px;
+      background-size: 101%;
+      background-position: center; }
     @media screen and (max-width: 800px) {
       section#bloqueLinks a.bloqueLinks-acceso {
         width: 100%; } }
+
+.botonFides {
+  background-color: #ca2417;
+  color: white;
+  border: 0px;
+  padding: 4px 30px;
+  display: inline-block;
+  font-weight: 500;
+  border: 2px solid #ca2417;
+  box-sizing: border-box;
+  transition: 0.3s; }
+  .botonFides:hover {
+    box-sizing: border-box;
+    border: 2px solid #ca2417;
+    background-color: white;
+    color: #ca2417; }
+
+.pl {
+  padding-left: 20px; }
+
+#link {
+  text-decoration: none;
+  color: auto; }
 
 #bloqueContacto {
   background-color: #161b27;
@@ -108,7 +143,13 @@ section#bloqueLinks {
       background-color: #ca2417;
       color: white;
       border: 0px;
-      padding: 5px 30px; }
+      padding: 5px 30px;
+      border: 1px solid #ca2417;
+      transition: 0.3s; }
+      #bloqueContacto .contenidoForm button:hover {
+        border: 1px solid white;
+        background-color: white;
+        color: #ca2417; }
 
 @font-face {
   font-family: 'GuardianSans';
@@ -127,6 +168,18 @@ section#bloqueLinks {
   src: url(../fonts/GuardianSansRegularIt.otf);
   font-weight: 500;
   font-style: italic; }
+
+@font-face {
+  font-family: 'GuardianSans';
+  src: url(../fonts/GuardianSansRegular.otf);
+  font-weight: 400;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'GuardianSans';
+  src: url(../fonts/GuardianSansLight.otf);
+  font-weight: 300;
+  font-style: normal; }
 
 section#photoHeader {
   text-align: center; }
@@ -182,6 +235,26 @@ section#photoHeader {
     @media screen and (max-width: 700px) {
       section#photoHeader span.headerNosotros {
         background-image: url(../images/headerNosotrosMobile.png); } }
+  section#photoHeader span.headerTendencias {
+    font-style: italic;
+    background-image: url(../images/headerTendencias.png); }
+    @media screen and (max-width: 700px) {
+      section#photoHeader span.headerTendencias {
+        background-image: url(../images/headerTendenciasMobile.png); } }
+  section#photoHeader span.headerNotas {
+    font-style: italic;
+    min-height: 150px;
+    background-image: url(../images/headerNotas.png); }
+    @media screen and (max-width: 700px) {
+      section#photoHeader span.headerNotas {
+        background-image: url(../images/headerNotasMobile.png); } }
+  section#photoHeader span.headerNewsletter {
+    min-height: 150px;
+    font-style: italic;
+    background-image: url(../images/headerNewsletter.png); }
+    @media screen and (max-width: 700px) {
+      section#photoHeader span.headerNewsletter {
+        background-image: url(../images/headerNewsletterMobile.png); } }
 
 footer .contenidoFooter {
   justify-content: space-between; }
@@ -235,7 +308,7 @@ footer .contenidoFooter {
           width: 30px; } }
 
 section#accesoIndustrias {
-  margin-top: 50px; }
+  margin-top: 100px; }
 
 .accesoIndustrias {
   flex-direction: row;
@@ -347,14 +420,21 @@ section#accesoIndustrias {
   padding-bottom: 80px; }
 
 header {
-  width: 90%;
-  max-width: 1366px;
-  justify-content: space-between; }
+  justify-content: space-between;
+  position: sticky;
+  top: 0px;
+  width: 100%;
+  background-color: white;
+  z-index: 999999; }
   header div#navbarNav {
     justify-content: flex-end; }
     header div#navbarNav ul.navbar-nav {
       gap: 20px;
       font-size: 16px; }
+      header div#navbarNav ul.navbar-nav li {
+        border-bottom: 1px solid white; }
+      header div#navbarNav ul.navbar-nav li:hover {
+        border-bottom: 1px solid #444444; }
 
 @media screen and (max-width: 600px) {
   .navbar-brand {
@@ -365,8 +445,11 @@ header {
 .contenedorNotas {
   margin-top: 30px;
   display: flex;
-  gap: 30px; }
-  @media screen and (max-width: 700px) {
+  gap: 30px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center; }
+  @media screen and (max-width: 600px) {
     .contenedorNotas {
       flex-direction: column; } }
   .contenedorNotas .contenedorNota-bloque {
@@ -376,8 +459,12 @@ header {
     display: flex;
     flex-direction: column;
     align-items: left;
-    padding: 50px;
-    text-align: left; }
+    padding: 30px;
+    text-align: left;
+    width: 45%; }
+    @media screen and (max-width: 600px) {
+      .contenedorNotas .contenedorNota-bloque {
+        width: 100%; } }
     .contenedorNotas .contenedorNota-bloque .nota-titulo {
       font-weight: 900;
       font-size: 15px;
@@ -390,11 +477,53 @@ header {
       padding-bottom: 30px;
       font-weight: 300;
       text-align: justify; }
-    .contenedorNotas .contenedorNota-bloque .nota-seguirLeyendo {
+    .contenedorNotas .contenedorNota-bloque button.nota-seguirLeyendo {
       color: #ca2417;
       font-size: 10px;
       font-weight: 600;
-      letter-spacing: 1px; }
+      letter-spacing: 1px;
+      border: 0px;
+      background-color: white;
+      text-align: left; }
+
+.contenedorNotas.blogNotas .contenedorNota-bloque {
+  width: 30%; }
+  @media screen and (max-width: 800px) {
+    .contenedorNotas.blogNotas .contenedorNota-bloque {
+      width: 40%; } }
+  @media screen and (max-width: 600px) {
+    .contenedorNotas.blogNotas .contenedorNota-bloque {
+      width: 100%; } }
+
+.vistaNota {
+  min-height: 200px !important; }
+
+#contenidoNota .encabezadoNota {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: left; }
+  #contenidoNota .encabezadoNota span {
+    display: block; }
+  #contenidoNota .encabezadoNota .encabezdaoNota--copete {
+    font-size: 14px;
+    color: #444444;
+    font-weight: 400;
+    padding-bottom: 5px; }
+  #contenidoNota .encabezadoNota h1.encabezdaoNota--titulo {
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: 500;
+    font-style: italic; }
+  #contenidoNota .encabezadoNota .encabezdaoNota--fecha {
+    font-weight: 300; }
+
+#contenidoNota .textoNota {
+  padding-top: 30px;
+  font-size: 0.9rem;
+  line-height: 30px;
+  text-align: left;
+  color: #444444;
+  text-align: justify; }
 
 .textosServicios {
   margin-top: 20px;
@@ -539,7 +668,7 @@ section#infoCvProfesional {
   background-color: #f6f7fa;
   margin-top: 100px;
   margin-bottom: 50px;
-  padding-top: 50px;
+  padding-top: 150px;
   padding-bottom: 50px; }
   section#infoCvProfesional .contenidoCV {
     gap: 50px;
@@ -660,3 +789,92 @@ section#infoCvProfesional {
 .carousel-inner.clientes .carousel-item .contenidoSlider .contenidoSlider-bloque-titulo {
   padding-top: 10px;
   padding-bottom: 10px; }
+
+.news-bloque {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  margin-bottom: 70px;
+  gap: 30px; }
+  @media screen and (max-width: 600px) {
+    .news-bloque {
+      flex-direction: column;
+      gap: 10px; } }
+  .news-bloque .news-bloque--image {
+    width: 55%; }
+    @media screen and (max-width: 600px) {
+      .news-bloque .news-bloque--image {
+        width: 100%; } }
+    .news-bloque .news-bloque--image img {
+      width: 100%; }
+  .news-bloque .news-bloque--info {
+    width: 45%;
+    text-align: left; }
+    @media screen and (max-width: 600px) {
+      .news-bloque .news-bloque--info {
+        width: 100%; } }
+    .news-bloque .news-bloque--info span {
+      display: block; }
+    .news-bloque .news-bloque--info .news-bloque--info--fecha {
+      font-size: 30px;
+      font-weight: 400;
+      text-transform: uppercase; }
+    .news-bloque .news-bloque--info .news-bloque--info--titulo {
+      font-weight: 600; }
+    .news-bloque .news-bloque--info .news-bloque--info--descripcion {
+      font-size: 14px;
+      line-height: 20px; }
+      .news-bloque .news-bloque--info .news-bloque--info--descripcion span {
+        padding-bottom: 10px; }
+    .news-bloque .news-bloque--info .news-bloque-links {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      text-decoration: underline;
+      font-size: 14px; }
+      .news-bloque .news-bloque--info .news-bloque-links a {
+        color: #ca2417; }
+      .news-bloque .news-bloque--info .news-bloque-links button.news-bloque-links-icono {
+        border: 0px;
+        background-color: white; }
+        .news-bloque .news-bloque--info .news-bloque-links button.news-bloque-links-icono img {
+          max-height: 30px;
+          width: 100%; }
+
+#publicacionesDestacadas .publicacionesDestacadasBack {
+  width: 90%;
+  background-image: url(../images/publicacionesDestacadasBack.png);
+  background-size: 100%;
+  display: flex;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  color: white;
+  justify-content: center;
+  font-size: 30px; }
+
+#publicacionesDestacadas .botonFides {
+  margin-top: 50px;
+  font-size: 18px;
+  font-weight: 500; }
+
+td {
+  padding-top: 10px !important;
+  padding-bottom: 10px !important; }
+
+.tablaFides--separador {
+  display: block;
+  padding-top: 10px;
+  padding-bottom: 10px; }
+
+.tablaFides--separador:first-child {
+  border-bottom: 1px solid #dee2e6; }
+
+.tituloCalendario {
+  font-size: 30px; }
+  @media screen and (max-width: 600px) {
+    .tituloCalendario {
+      font-size: 20px;
+      line-height: 30px; } }
+
+.contenedor-calendario {
+  padding-bottom: 100px; }
