--- a/scss/headers.scss
+++ b/scss/headers.scss
@@ -66,6 +66,14 @@ section#photoHeader{
       }
     }
 
+    // HEADER CLIENTES
+    span.headerClientes{
+      background-image: url(../images/headerClientes.png);
+      @media screen and (max-width:700px) {
+        background-image: url(../images/headerClientesMobile.png);
+      }
+    }    
+
 
     // HEADER NOSOTROS
     span.headerNosotros{
