--- a/styles/fidesnet.css
+++ b/styles/fidesnet.css
@@ -528,7 +528,8 @@ header {
   line-height: 30px;
   text-align: left;
   color: #444444;
-  text-align: justify; }
+  text-align: justify;
+  padding-bottom: 100px; }
 
 .textosServicios {
   margin-top: 20px;
