--- a/styles/fidesnet.css
+++ b/styles/fidesnet.css
@@ -547,6 +547,9 @@ header {
   text-align: justify;
   padding-bottom: 100px; }
 
+.fontEncabezadoNota {
+  font-size: 0.7rem; }
+
 .textosServicios {
   margin-top: 20px;
   font-size: 16px;
