--- a/scss/headers.scss
+++ b/scss/headers.scss
@@ -42,9 +42,9 @@ section#photoHeader{
   
   // HEADER HOME
   span.headerHome{
-    background-image: url(../images/headerHome.png);
+    background-image: url(../images/headerHome2.png);
     @media screen and (max-width:700px) {
-      background-image: url(../images/headerHomeMobile.png);
+      background-image: url(../images/headerHomeMobile2.png);
     }
   }
   
