--- a/scss/fidesPop.scss
+++ b/scss/fidesPop.scss
@@ -43,8 +43,9 @@
   padding-top: 10px;
   padding-bottom: 10px;
   align-items: center;
+  font-size: 12px;
   .textoTopHeader{
-    font-weight: 900;
+    font-weight: 500;
   }
   .botonheader{
     background-color: $fidesRed;
